// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CardHeader > should allow addons before and after the children 1`] = `
<div
  class="rmd-card__header rmd-card__header--surrounded"
  data-testid="header"
>
  <img
    alt=""
    src="/some-image.png"
  />
  <div
    class="rmd-card__header-content"
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-no-margin rmd-card__title"
    >
      Elizabeth Park
    </h5>
    <h6
      class="rmd-typography rmd-typography--subtitle-2 rmd-text-secondary-color rmd-no-margin rmd-card__subtitle"
    >
      Work contact
    </h6>
  </div>
  <button
    aria-label="Expand"
    class="rmd-button rmd-button--icon rmd-interaction-surface"
    type="button"
  />
</div>
`;

exports[`CardHeader > should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<div
  class="rmd-card__header"
  data-testid="header"
>
  <div
    class="rmd-card__header-content"
  >
    Header
  </div>
</div>
`;

exports[`CardHeader > should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<div
  class="rmd-card__header custom-class-name"
  data-testid="header"
  style="color: white;"
>
  <div
    class="rmd-card__header-content"
  >
    Header
  </div>
</div>
`;

exports[`CardHeader > should apply the correct styling, HTML attributes, and allow a ref 3`] = `
<div
  class="rmd-card__header"
  data-testid="header"
  style=""
>
  <div
    class="rmd-card__header-content custom-class-name"
    style="color: orange;"
  >
    Header
  </div>
</div>
`;
